# fi-th

./: README.md  pyproject.toml
companies/: admin.py  catalogs.py  models.py  serializers.py  urls.py  views.py
companies/migrations/: 0001_initial.py  0002_alter_feedispatchcontact_invoice_to.py  0002_initial.py
companies/serializers/: base.py  catalogs.py  contact.py
core/: api_root.py  exceptions.py  settings.py  urls.py
financial/: admin.py  catalogs.py  models.py  serializers.py  urls.py  views.py
financial/management/commands/: update_contract_statuses.py
financial/migrations/: 0001_initial.py
financial/serializers/: base.py  catalogs.py
