[project]
name = "fi-th"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.8"
dependencies = [
    "django>=5.2.3",
    "django-cors-headers>=4.7.0",
    "django-extensions>=4.1",
    "djangorestframework>=3.16.0",
]

[dependency-groups]
dev = [
    "ipython>=9.3.0",
]
